--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -103,7 +103,7 @@ function _retrieveXmlData(retrieveDataCallback) {
             var sr =
                 '<?xml version="1.0" encoding="utf-8"?>' +
 		'<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:web="http://www.dataaccess.com/webservicesserver/">' +
-   		'<soapenv:Header/' +
+   		'<soapenv:Header/>' +
    		'<soapenv:Body>' +
     		  '<web:NumberToWords>'+
       		   '<web:ubiNum>56</web:ubiNum>'+
