--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -105,10 +105,10 @@ function _retrieveXmlData(retrieveDataCallback) {
 		'<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:web="http://www.dataaccess.com/webservicesserver/">' +
    		'<soapenv:Header/>' +
    		'<soapenv:Body>' +
-    		  '<web:NumberToWords>'+
-      		   '<web:ubiNum>56</web:ubiNum>'+
-   		   '</web:NumberToWords>'+
-		   '</soapenv:Body>'+
+       		'<web:NumberToDollars>'+
+         	'<web:dNum>5</web:dNum>'+
+     		'</web:NumberToDollars>'+
+		 '</soapenv:Body>'+
 		'</soapenv:Envelope>'
                 /*
 		'<soapenv:Envelope ' + 
