--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -26,7 +26,7 @@
         for (var fieldName in headers) {
 		//if (
             if (headers.hasOwnProperty(fieldName)) {
-		var fieldName_cleaned = fieldName.replace(/#/g,'').replace(/:/g,'_');
+		var fieldName_cleaned = fieldName.replace(/#/g,'').replace(/:/g,'');
 		//console.log(res)
 		//var fieldName_cleaned1 = fieldName.replace('#','');
 		//var fieldName_cleaned2 = fieldName_cleaned1.replace(':','');
