--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -65,18 +65,9 @@
         	}
     	}, Object.create(null));
 	//console.log(filtered);
-	//loop through the array of objects to remove objects that are null
-        filtered2 = rowData.filter(function (a) {
-        	var temp = Object.keys(a).map(function (k) { return a[k]; }),
-           		 k = temp.join('|');
-       		if (!this[k] && temp.join('#')) {
-            		this[k] = true;
-            		return true;
-        	}
-    	}, Object.create(null));
-	console.log(filtered2);
+
 	//loop through the array of objects to remove special characters (just as it was done with the headers)         
-	filtered.map(function(item) {
+	var filtered2 = filtered.map(function(item) {
 		Object.keys(item).forEach(function(key) {
   			var newkey1 = key.replace('#','');
 			var newkey2 = newkey1.replace(':','');
@@ -87,7 +78,7 @@
 		});  
 		
 	});
-	//console.log(filtered2);
+	console.log(filtered2);
 	table.appendRows(filtered);
 	doneCallback();
       });
