--- a/xml_one-table_dynamic-schema.html
+++ b/xml_one-table_dynamic-schema.html
@@ -66,7 +66,7 @@
     	}, Object.create(null));
 	//console.log(filtered);
 	//loop through the array of objects to remove special characters (just as it was done with the headers)         
-	var filteree2 = filtered.map(function(item) {
+	var filtered2 = filtered.map(function(item) {
 		Object.keys(item).forEach(function(key) {
   			var newkey1 = key.replace('#','');
 			var newkey2 = newkey1.replace(':','');
