--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -61,8 +61,14 @@
 	console.log(filtered);
 
 	//loop through the array of objects to remove special characters (just as it was done with the headers)  
-	filtered = filtered.map(obj => replaceKeys(obj, /#/g, ''));
-	filtered = filtered.map(obj => replaceKeys(obj, /:/g, ''));
+          filtered = filtered.map(function(obj) {
+                  return replaceKeys(obj, \#\g, ''));
+           }
+          filtered = filtered.map(function(obj) {
+                  return replaceKeys(obj, \:\g, ''));
+           }
+	//filtered = filtered.map(obj => replaceKeys(obj, /#/g, ''));
+	//filtered = filtered.map(obj => replaceKeys(obj, /:/g, ''));
 	console.log(filtered);      
 	
 	 //add the rows to the table
