--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -67,6 +67,7 @@
           filtered = filtered.map(function(obj) {
                   return replaceKeys(obj, /:/g, '');
            });
+	// WDC doesnt work in Tableau Desktop when using arrow functions 
 	//filtered = filtered.map(obj => replaceKeys(obj, /#/g, ''));
 	//filtered = filtered.map(obj => replaceKeys(obj, /:/g, ''));
 	console.log(filtered);      
@@ -82,8 +83,17 @@
 //function to replace special characters in object keys within the array of table row data	
 function replaceKeys(obj, find, replace) {
   return Object.keys(obj).reduce (
+    function(acc, key) {
+	return Object.assign(acc, { [key.replace(find, replace)]: obj[key] }), {});
+    }
+}
+ 
+/*
+function replaceKeys(obj, find, replace) {
+  return Object.keys(obj).reduce (
     (acc, key) => Object.assign(acc, { [key.replace(find, replace)]: obj[key] }), {});
 }
+*/
   		
 	
  //retrieve the xml data either from a user entered url or as input as a pasted file - CURRENTLY: default URL to testfile as datasource 	
