--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -112,11 +112,11 @@ function _retrieveXmlData(retrieveDataCallback) {
 	//xml http request
             var xmlhttp = new XMLHttpRequest();
 	    //enter default url or take it from user input (const url) ||| CURRENTLY: Test URL + Test Request
-            xmlhttp.open('POST', proxyurl + 'https://mucsap20.infineon.com/livecompare/SusanneDashboard/getCustomCodeData.lcsx', true);
+            xmlhttp.open('POST', proxyurl + 'https://www.dataaccess.com/webservicesserver/numberconversion.wso?WSDL', true);
             // build SOAP request
             var sr =
                 '<?xml version="1.0" encoding="utf-8"?>' +
-		'<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:web="https://mucsap20.infineon.com/livecompare/SusanneDashboard/getCustomCodeData.lcsx">' +
+		'<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:web="https://www.dataaccess.com/webservicesserver/numberconversion.wso?WSDL">' +
    		'<soapenv:Header/>' +
    		    '<soapenv:Body>' +
        			'<web:NumberToDollars>'+  
