--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -116,7 +116,7 @@ function _retrieveXmlData(retrieveDataCallback) {
             // build SOAP request
             var sr =
                 '<?xml version="1.0" encoding="utf-8"?>' +
-		'<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:web="https://www.dataaccess.com/webservicesserver/numberconversion.wso?WSDL">' +
+		'<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:web="http://www.dataaccess.com/webservicesserver/numberconversion.wso?WSDL">' +
    		'<soapenv:Header/>' +
    		    '<soapenv:Body>' +
        			'<web:NumberToDollars>'+  
