--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -62,7 +62,7 @@
 
 	//loop through the array of objects to remove special characters (just as it was done with the headers)  
         //  filtered = filtered.map(function(obj) {
-		var keys = Object.keys(fitlered);	   
+		var keys = Object.keys(filtered);	   
 		for (var j=0; j < keys.length; j++) {
   			 var key = keys[j].replace(/:/g, "").replace(/#/g, "");  
   			 tmp[key] = filtered[keys[j]];
