--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -64,7 +64,7 @@
         //  filtered = filtered.map(function(obj) {
 		var keys = Object.keys(filtered);	   
 		for (var j=0; j < keys.length; j++) {
-  			 var key = keys[j].replace(/:/g, "").replace(/#/g, "");  
+  			 var key = keys[j].replace(/:/g, "");  
   			var tmp = {}; 
 			tmp[key] = filtered[keys[j]];
 		         keys.push(tmp[key]);
