--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -73,7 +73,7 @@
 	console.log(filtered);      
 	
 	//add the rows to the table
-	table.appendRows(keys);
+	table.appendRows(filtered);
 	doneCallback();
       });
   };
