--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -68,7 +68,7 @@
     		var mem = filtered[key];
     		delete filtered[key];
     		filtered[newKey] = mem;
-		console.log(filtered[newKey];
+		console.log(filtered[newKey]);
  	}
 		
 	/*      
