--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -95,7 +95,7 @@ function replaceKeys(obj, find, replace) {
   return Object.keys(obj).reduce (
     function(acc, key) {
 	var newkey = key.replace(find, replace);
-	var newObj = { key.replace(find,replace): obj[key]}
+	var newObj = { newkey: obj[key]}
 	return Object.assign(acc, newObj), {}
     }); 
 }
