--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -63,6 +63,9 @@
 	//loop through the array of objects to remove special characters (just as it was done with the headers)         	      
 	var keys = Object.keys(filtered);
 	console.log(keys);
+	for (i = 0; i<filtered.length; i ++ ) {
+		console.log(filtered[i];
+	}
 	      
 	filtered = filtered.map(function(obj) {
 		return replaceKeys(obj, /#/g, '');
