--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -64,7 +64,7 @@
 	var keys = Object.keys(filtered);
 	console.log(keys);
 	for (i = 0; i<filtered.length; i ++ ) {
-		console.log(filtered[i];
+		console.log(filtered[i]);
 	}
 	      
 	filtered = filtered.map(function(obj) {
