--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -63,8 +63,17 @@
 	//loop through the array of objects to remove special characters (just as it was done with the headers)         	      
 	var keys = Object.keys(filtered);
 	console.log(keys);
+	var filtered2 = [];
 	for (i = 0; i<filtered.length; i ++ ) {
 		console.log(filtered[i]);
+		var obj  = filtered[i];
+		for (var key in obj) {	
+		    console.log(key);
+		    var newkey = key.replace(/#/g,'').replace(/:/g,'');
+		    var newobj = obj[newkey];
+		    filtered2.push(newobj);
+		}
+			
 	}
 	      
 	filtered = filtered.map(function(obj) {
