--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -75,6 +75,7 @@
 		}
 			
 	}
+	      console.log(filtered2);
 	      
 	filtered = filtered.map(function(obj) {
 		return replaceKeys(obj, /#/g, '');
