--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -71,7 +71,9 @@
 		for (var key in obj) {	
 		    console.log(key);
 		    var newkey = key.replace(/#/g,'').replace(/:/g,'');
+		    console.log(newkey);
 		    newobj = obj[newkey];
+			console.log(newobj);
 		}
 	        filtered2.push(newobj);			
 	}
