--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -74,7 +74,7 @@
 		    var cleankey2 = cleankey1.replace(/:/g,'');
 		    console.log(cleankey2);
 		    newobj = obj[cleankey2];
-		    console.log(newobj);
+		    console.log(obj[key]);
 		}
 	        filtered2.push(newobj);			
 	}
