--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -67,7 +67,7 @@
 		var obj  = filtered[i];
 		var newobj = {};
 		for (var key in obj) {	
-		    console.log(k);
+		    console.log(key);
 		    var cleankey1 = key.replace(/#/g,'');
 		    var cleankey2 = cleankey1.replace(/:/g,'');
 		    console.log(cleankey2);
